spelling, style and content corrections

--- a/wp-content/themes/understrap-child/css/child-theme.css
+++ b/wp-content/themes/understrap-child/css/child-theme.css
@@ -24720,9 +24720,15 @@ button {
     .claim__container {
       height: 100vh; } }
 
-@media only screen and (min-width: 48em) {
-  .claim__pagination {
-    top: 15%; } }
+.pagination.claim__pagination {
+  min-height: 2em; }
+  @media only screen and (min-width: 48em) {
+    .pagination.claim__pagination {
+      margin-bottom: unset;
+      min-height: 4em;
+      -webkit-box-flex: 0;
+          -ms-flex: 0 1 4em;
+              flex: 0 1 4em; } }
 
 .claim__content-container {
   min-height: 100%; }
@@ -25024,9 +25030,9 @@ button {
 @media only screen and (min-width: 78em) {
   .hybrid__header-container {
     -webkit-box-flex: 0;
-        -ms-flex: 0 0 38%;
-            flex: 0 0 38%;
-    max-width: 38%;
+        -ms-flex: 0 0 33%;
+            flex: 0 0 33%;
+    max-width: 33%;
     min-height: 32em;
     display: -webkit-box;
     display: -ms-flexbox;
@@ -25120,10 +25126,9 @@ button {
   @media only screen and (min-width: 78em) {
     .hybrid__body-container {
       -webkit-box-flex: 0;
-          -ms-flex: 0 0 38%;
-              flex: 0 0 38%;
-      max-width: 35%;
-      padding: 0 4%;
+          -ms-flex: 0 0 33%;
+              flex: 0 0 33%;
+      max-width: 33%;
       z-index: 3; } }
 
 .copy__block--intro.hybrid__copy-block,
@@ -25186,7 +25191,10 @@ button {
     -webkit-transform: translateX(-50%);
             transform: translateX(-50%);
     left: 50%;
-    text-align: center; } }
+    text-align: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center; } }
 
 @media only screen and (min-width: 78em) {
   .hybrid__link {
@@ -26621,7 +26629,7 @@ button {
       -webkit-box-flex: 2;
           -ms-flex: 2;
               flex: 2;
-      min-height: 100vh; } }
+      min-height: 115vh; } }
 
 @media only screen and (min-width: 78em) {
   .mo__article-wrapper {
@@ -28943,7 +28951,7 @@ path.st0 {
       -webkit-box-flex: 1;
           -ms-flex: 1 1 18%;
               flex: 1 1 18%;
-      max-width: 26%;
+      max-width: 34%;
       min-height: 95em;
       border-left: 0.05rem #f8f9fa solid;
       border-right: 0.05rem #f8f9fa solid;
@@ -30510,11 +30518,11 @@ a.link__background-brands--jump {
   -webkit-box-pack: baseline;
       -ms-flex-pack: baseline;
           justify-content: baseline;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   max-width: 90%;
-  z-index: 2; }
+  z-index: 2;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 auto;
+          flex: 0 1 auto; }
   @media only screen and (min-width: 48em) {
     .services-splash__container {
       max-width: 83%;
@@ -30528,7 +30536,8 @@ a.link__background-brands--jump {
       .services-splash__container .services-splash__link--jump {
         margin-top: 18.00012rem;
         -ms-flex-item-align: start;
-            align-self: flex-start; } }
+            align-self: flex-start;
+        width: 40%; } }
   @media only screen and (min-width: 48em) and (min-width: 48em) and (min-width: 48em) {
     .services-splash__container .services-splash__link--jump {
       margin-top: 18.66679rem; } }
@@ -30544,37 +30553,126 @@ a.link__background-brands--jump {
   @media only screen and (min-width: 64em) {
     .services-splash__container {
       padding-top: 0;
-      max-width: 38%;
+      max-width: 80%;
+      width: 40%;
       margin-left: 16%;
       -webkit-box-pack: center;
           -ms-flex-pack: center;
               justify-content: center; } }
   @media only screen and (min-width: 78em) {
     .services-splash__container {
-      max-width: 26%;
-      margin-left: 12%; } }
+      max-width: 35%;
+      width: 35%;
+      margin-left: 8%; } }
 
 @media only screen and (min-width: 48em) {
   .pagination--services-splash {
     margin-bottom: unset; } }
 
 .services-splash__container .title {
-  color: #fff; }
+  color: #fff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  min-height: .25em;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 auto;
+          flex: 0 1 auto;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  letter-spacing: .025rem;
+  position: relative;
+  font-size: 11.39063rem;
+  line-height: 12.00001rem;
+  line-height: 3.00002rem; }
+  @media (min-width: 48em) {
+    .services-splash__container .title {
+      font-size: 11.39063rem;
+      line-height: 12.44445rem;
+      line-height: 3.11113rem; } }
+  @media (min-width: 78em) {
+    .services-splash__container .title {
+      font-size: 11.39063rem;
+      line-height: 12.00001rem;
+      line-height: 3.00002rem; } }
+  @media (min-width: 118em) {
+    .services-splash__container .title {
+      font-size: 11.39063rem;
+      line-height: 12.44445rem;
+      line-height: 3.11113rem; } }
+  @media (min-width: 160rem) {
+    .services-splash__container .title {
+      font-size: 11.39063rem;
+      line-height: 12.00001rem;
+      line-height: 3.00002rem; } }
+  @media only screen and (min-width: 64em) {
+    .services-splash__container .title {
+      font-size: 11.39063rem;
+      line-height: 12.00001rem;
+      line-height: 3.00002rem; } }
+  @media only screen and (min-width: 78em) {
+    .services-splash__container .title {
+      font-size: 17.08594rem;
+      line-height: 18.00001rem;
+      line-height: 9.00006rem; } }
 
-.services-splash__title-sub {
+.br__services-splash {
+  line-height: 1.50001rem; }
+  @media (min-width: 48em) {
+    .br__services-splash {
+      line-height: 1.55557rem; } }
+  @media (min-width: 78em) {
+    .br__services-splash {
+      line-height: 1.50001rem; } }
+  @media (min-width: 118em) {
+    .br__services-splash {
+      line-height: 1.55557rem; } }
+  @media (min-width: 160rem) {
+    .br__services-splash {
+      line-height: 1.50001rem; } }
+
+.services-splash__sub {
   color: #fff;
   max-width: 90%;
-  -ms-flex-item-align: start;
-      align-self: flex-start; }
+  font-family: geomanist, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  min-height: 1em;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 auto;
+          flex: 0 1 auto;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border-top: 0.75rem solid #fff; }
   @media only screen and (min-width: 48em) {
-    .services-splash__title-sub {
+    .services-splash__sub {
       max-width: 90%; } }
   @media only screen and (min-width: 64em) {
-    .services-splash__title-sub {
-      min-height: 3em;
-      -webkit-box-flex: 0;
-          -ms-flex: 0 0 30%;
-              flex: 0 0 30%; } }
+    .services-splash__sub {
+      min-height: 2em;
+      font-size: 2.15rem; } }
+
+.services-splash__separator {
+  all: inherit;
+  color: #23C9FF;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+  max-width: 5%;
+  text-align: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  border: none; }
 
 .services-splash__image-container {
   background-color: rgba(0, 0, 0, 0.8);
@@ -30606,6 +30704,13 @@ a.link__background-brands--jump {
         left: -110%;
         width: 150%; } }
     @media only screen and (min-width: 78em) {
+      .services-splash__image-container img {
+        width: 110%;
+        left: -23%;
+        top: -74%;
+        -webkit-transform: translate(21%, 37%);
+                transform: translate(21%, 37%); } }
+    @media only screen and (min-width: 90em) {
       .services-splash__image-container img {
         width: 110%;
         left: -23%;
@@ -34452,14 +34557,17 @@ p.commitment__body_copy {
       height: 64%;
       padding: 0 8%;
       -webkit-transform: translateX(15%);
-              transform: translateX(15%); } }
+              transform: translateX(15%);
+      background: rgba(255, 255, 255, 0.46);
+      padding: 2%; } }
   @media only screen and (min-width: 78em) {
     .marketing-splash__container {
-      max-width: 38%;
-      -webkit-transform: translateX(-50%);
-              transform: translateX(-50%);
-      padding: 2% 4%;
-      height: 74%; } }
+      max-width: 24%;
+      width: 33%;
+      -webkit-transform: translate(-84%, -17%);
+              transform: translate(-84%, -17%);
+      background: rgba(255, 255, 255, 0.46);
+      padding: 2%; } }
 
 .marketing-splash__container > .marketing-splash__link--jump {
   -ms-flex-item-align: start;
@@ -37433,6 +37541,11 @@ img.style-svg.image-bell {
     display: block;
     bottom: 0;
     left: 0; }
+    @media only screen and (min-width: 64em) {
+      .article__services-intro .background__image--cover img {
+        max-width: 200%;
+        width: 130%;
+        bottom: 10%; } }
     @media only screen and (min-width: 78em) {
       .article__services-intro .background__image--cover img {
         top: -31%;
@@ -37484,58 +37597,21 @@ img.style-svg.image-bell {
           max-width: 83%; } }
       @media only screen and (min-width: 64em) {
         .article__services-intro .flex-container .flex-item {
-          max-width: 50%;
+          max-width: 60%;
           display: block;
-          top: 50%;
-          left: 75%;
+          top: 59%;
+          left: 72%;
           -webkit-transform: translate(-50%, -50%);
                   transform: translate(-50%, -50%);
-          padding: 9.00006rem;
-          position: absolute; } }
+          padding: 3.00002rem;
+          position: absolute;
+          -webkit-box-flex: 0;
+              -ms-flex: 0 1 auto;
+                  flex: 0 1 auto;
+          width: 35%; } }
       @media only screen and (min-width: 78em) {
         .article__services-intro .flex-container .flex-item {
           max-width: 24%; } }
-      .article__services-intro .flex-container .flex-item .title {
-        font-size: 5.0625rem;
-        line-height: 6.00001rem;
-        line-height: 5.25004rem;
-        margin: 3.00002rem 0; }
-        @media (min-width: 48em) {
-          .article__services-intro .flex-container .flex-item .title {
-            font-size: 5.0625rem;
-            line-height: 6.22223rem;
-            line-height: 5.44448rem;
-            margin: 3.11113rem 0; } }
-        @media (min-width: 78em) {
-          .article__services-intro .flex-container .flex-item .title {
-            font-size: 5.0625rem;
-            line-height: 6.00001rem;
-            line-height: 5.25004rem;
-            margin: 3.00002rem 0; } }
-        @media (min-width: 118em) {
-          .article__services-intro .flex-container .flex-item .title {
-            font-size: 5.0625rem;
-            line-height: 6.22223rem;
-            line-height: 5.44448rem;
-            margin: 3.11113rem 0; } }
-        @media (min-width: 160rem) {
-          .article__services-intro .flex-container .flex-item .title {
-            font-size: 5.0625rem;
-            line-height: 6.00001rem;
-            line-height: 5.25004rem;
-            margin: 3.00002rem 0; } }
-        @media only screen and (min-width: 48em) {
-          .article__services-intro .flex-container .flex-item .title {
-            font-size: 11.39063rem;
-            line-height: 12.00001rem;
-            line-height: 5.25004rem;
-            margin: 3.00002rem 0; } }
-        @media only screen and (min-width: 78em) {
-          .article__services-intro .flex-container .flex-item .title {
-            font-size: 5.0625rem;
-            line-height: 6.00001rem;
-            line-height: 5.25004rem;
-            margin: 3.00002rem 0; } }
       .article__services-intro .flex-container .flex-item .subhead {
         width: 100%;
         max-width: 100%;
@@ -37975,8 +38051,7 @@ img.style-svg.image-bell {
       margin: 1.50001rem;
       padding: 1.50001rem;
       -webkit-box-shadow: 12px 10px 19px -14px rgba(0, 0, 0, 0.5);
-      box-shadow: 12px 10px 19px -14px rgba(0, 0, 0, 0.5);
-      background: green; } }
+      box-shadow: 12px 10px 19px -14px rgba(0, 0, 0, 0.5); } }
   @media only screen and (min-width: 78em) {
     .article__flexible {
       height: 100em;
