--- a/wp-content/themes/understrap-child/sass/theme/partials/_article_styles.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/_article_styles.scss
@@ -1466,7 +1466,7 @@ padding-left: 2em;
 //   color: $off-white;
 // }
 //   .expt-body-text, .expt-vert {
-//     color: $dark-sea-green;
+//     color: $primary;
 //   }
 
 //   hr {
@@ -1938,7 +1938,7 @@ text.st3.st4.st5{
     }
 
     #Layer_2 .st0 {
-        // fill: $dark-sea-green;
+        // fill: $primary;
         fill: $primary;
     }
     polygon {
