--- a/wp-content/themes/understrap-child/sass/theme/partials/_modules.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/_modules.scss
@@ -279,7 +279,7 @@ button {
   &__text{
     &--positioned{
       @include link__text();
-      color: $accent;
+      color: $secondary;
       font-weight: 400;
       font-variant-caps: all-small-caps;
       letter-spacing: .05em;
